styling and fix dropdown getting cut off

--- a/client/input_data/styles.css
+++ b/client/input_data/styles.css
@@ -24,7 +24,7 @@ body {
 } */
 
 .dropdown-content {
-    max-height: 13em;
+    max-height: 14em;
     overflow: auto;
 }
 
